--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,15 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    cap_add:
+      - SYS_NICE
     environment:
       MYSQL_ROOT_PASSWORD: root123
     volumes:
-      - ./sql/master:/docker-entrypoint-initdb.d:ro
       - ./config/master.cnf:/etc/mysql/my.cnf:ro
+      - ./sql/master/replication_user.sql:/docker-entrypoint-initdb.d/replication_user.sql:ro
+      - ./sql/master/scheme.sql:/docker-entrypoint-initdb.d/scheme.sql:ro
+      - ./sql/master/values.sql:/docker-entrypoint-initdb.d/values.sql:ro
     mem_limit: 512M
     networks:
       macvlan:
@@ -26,11 +30,13 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    cap_add:
+      - SYS_NICE
     environment:
       MYSQL_ROOT_PASSWORD: root123
     volumes:
-      - ./sql/slave:/docker-entrypoint-initdb.d:ro
       - ./config/slave.cnf:/etc/mysql/my.cnf:ro
+      - ./sql/slave:/docker-entrypoint-initdb.d:ro
     mem_limit: 512M
     networks:
       macvlan:
