--- a/config/master.cnf
+++ b/config/master.cnf
@@ -25,6 +25,9 @@ socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
 secure-file-priv= NULL
 
+character-set-client-handshake=false
+character-set-server=utf8mb4
+collation-server=utf8mb4_0900_ai_ci
 bind-address=0.0.0.0
 server-id=1
 log_bin=mysql-bin
